# wrpc

./: .gitignore  ADOPTERS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.asl2  LICENSE.mit  README.md  SECURITY.md  SPEC.md  ZENOH.md  design.md  flake.nix  go.work  go.work.sum  rust-toolchain.toml  wrpc.md  zenoh_conf.json5  zenoh_conf.json5.template
.github/: CODEOWNERS  dependabot.yml
.github/actions/build-nix/: action.yml
.github/actions/install-nix/: action.yml
.github/workflows/: dependabot.yml  nix.yml  scorecard.yml  update.yml  wrpc.yml
benches/: bench.rs
benches/reactor/: Cargo.toml
benches/reactor/src/: lib.rs
benches/wit/: bench.wit
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  nats.rs  tracing.rs  zenoh.rs
crates/interface-blobstore/: Cargo.toml
crates/interface-blobstore/src/: lib.rs
crates/interface-blobstore/wit/: blobstore.wit  deps.toml
crates/interface-http/: Cargo.toml
crates/interface-http/src/: lib.rs
crates/interface-http/wit/: http.wit
crates/interface-keyvalue/: Cargo.toml
crates/interface-keyvalue/src/: lib.rs
crates/interface-keyvalue/wit/: keyvalue.wit
crates/introspect/: Cargo.toml
crates/introspect/src/: lib.rs
crates/message-channel/: Cargo.toml
crates/message-channel/src/: lib.rs
crates/message-channel/tests/: loopback.rs
crates/nats/: Cargo.toml
crates/nats/src/: lib.rs
crates/pack/: Cargo.toml
crates/pack/src/: lib.rs
crates/quic/: Cargo.toml
crates/quic/src/: lib.rs
crates/quic/tests/: loopback.rs
crates/runtime-wasmtime/: Cargo.toml
crates/runtime-wasmtime/src/: bindings.rs  codec.rs  lib.rs  paths.rs  polyfill.rs  serve.rs
crates/runtime-wasmtime/src/rpc/: mod.rs
crates/runtime-wasmtime/src/rpc/host/: context.rs  error.rs  invoker.rs  mod.rs  transport.rs
crates/runtime-wasmtime/src/types/: dynamic.rs  mod.rs
crates/runtime-wasmtime/wit/: deps.toml  world.wit
crates/test/: Cargo.toml
crates/test-helpers/: Cargo.toml
crates/test-helpers/codegen-macro/: Cargo.toml
crates/test-helpers/src/: lib.rs
crates/test/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport-legacy/: Cargo.toml
crates/transport-legacy/src/: lib.rs
crates/transport-memory/: Cargo.toml  README.md
crates/transport-memory/src/: lib.rs
crates/transport-memory/tests/: loopback.rs  no-args.wasm  no-args.wit
crates/transport-nats/: Cargo.toml
crates/transport-nats-legacy/: Cargo.toml
crates/transport-nats-legacy/src/: lib.rs
crates/transport-nats-next/: Cargo.toml
crates/transport-nats-next/src/: lib.rs
crates/transport-nats/src/: lib.rs
crates/transport-next/: Cargo.toml
crates/transport-next/src/: lib.rs
crates/transport-quic/: Cargo.toml
crates/transport-quic/src/: lib.rs
crates/transport-quic/tests/: loopback.rs
crates/transport-web/: Cargo.toml
crates/transport-web/src/: lib.rs
crates/transport-web/tests/: loopback.rs
crates/transport-zenoh/: Cargo.toml
crates/transport-zenoh/src/: lib.rs
crates/transport/src/: frame.rs  invoke.rs  lib.rs  serve.rs  value.rs
crates/transport/src/frame/: codec.rs  mod.rs  oneshot.rs  tcp.rs  unix.rs
crates/transport/src/frame/conn/: accept.rs  client.rs  mod.rs  server.rs
crates/transport/src/frame/tcp/: mod.rs  tokio.rs  wasi.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/wasi-keyvalue/: Cargo.toml
crates/wasi-keyvalue-mem/: Cargo.toml
crates/wasi-keyvalue-mem/src/: lib.rs
crates/wasi-keyvalue-redis/: Cargo.toml
crates/wasi-keyvalue-redis/src/: lib.rs
crates/wasi-keyvalue/src/: lib.rs
crates/wasi-keyvalue/wit/: deps.toml  world.wit
crates/wasmtime/: Cargo.toml
crates/wasmtime-cli/: Cargo.toml
crates/wasmtime-cli/src/: lib.rs  nats.rs  quic.rs  tcp.rs  unix.rs  web.rs  zenoh.rs
crates/wasmtime-nats-cli/: Cargo.toml
crates/wasmtime-nats-cli/src/: lib.rs  runtime.rs
crates/wasmtime-nats-cli/wit/: deps.toml  host.wit
crates/wasmtime/src/: codec.rs  lib.rs  paths.rs  polyfill.rs  serve.rs
crates/wave/: Cargo.toml
crates/wave/src/: lib.rs  pack.rs
crates/wave/src/core/: decode.rs  encode.rs
crates/wave/src/sync/: decode.rs  mod.rs
crates/websockets/: Cargo.toml
crates/websockets/src/: lib.rs
crates/websockets/tests/: loopback.rs
crates/webtransport/: Cargo.toml
crates/webtransport/src/: lib.rs
crates/webtransport/tests/: loopback.rs
crates/wit-bindgen/: Cargo.toml  README.md
crates/wit-bindgen-go/: Cargo.toml
crates/wit-bindgen-go/src/: interface.rs  lib.rs
crates/wit-bindgen-go/tests/: codegen.rs
crates/wit-bindgen-rust/: Cargo.toml
crates/wit-bindgen-rust-macro/: Cargo.toml
crates/wit-bindgen-rust-macro/src/: lib.rs
crates/wit-bindgen-rust/src/: interface.rs  lib.rs
crates/wit-bindgen-rust/tests/: codegen.rs  codegen_no_std.rs
crates/wit-bindgen-test/: Cargo.toml
crates/wit-bindgen-test/src/: config.rs  go.rs  (+2 more)
examples/web/: README.md
examples/wit/: example.wit
go/: chan_reader.go  client.go  codec.go  frame.go  frame_invoker.go  frame_reader.go  frame_server.go  frame_writer.go  frame_writer_test.go  future.go  go.mod  go.sum  list.go  option.go  primitive.go  reader.go  result.go  stream.go  subscriber.go  transmitter.go  tuple.go  util.go  writer.go  wrpc.go
go/nats/: client.go  client_test.go
js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
js/src/: frame.js  index.d.ts  index.js  io.js  mux.js  session.js  types.js  value.js  wit.js
js/test/: frame.test.js  session.test.js  value.test.js  wit.test.js
src/: client.rs  lib.rs  nats.rs  oneshot_topic.rs  server.rs  transmit.rs
src/transport/: mod.rs
tests/: bindgen.rs  codegen.skip  deadlock.rs  go.rs  integration.rs  nats.rs  rust.rs  simple-args.wasm
tests/codegen/: async-client.wit  async-resource.wit  async-server.wit
tests/common/: mod.rs
tests/go/: .gitignore  async.go  async_test.go  go.mod  go.sum  integration.go  integration_test.go  resources.go  resources_test.go  sync.go  sync_test.go  test.go  types_test.go  vendor_test.go  wrpc_test.go
tests/wit/: test.wit
wit/: world.wit
(+393 files in other folders)
