[package]
name = "wrpc-cli"
version = "0.7.0"
description = "wRPC CLI utilities"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["nats", "zenoh-transport"]
nats = ["async-nats/ring", "dep:async-nats", "dep:tokio", "tokio/sync"]
zenoh-transport = ["dep:zenoh", "dep:tokio", "tokio/sync"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
zenoh = { workspace = true, optional = true, features = ["transport_tcp"] }
