[package]
name = "wrpc-interface-http"
version = "0.9.1"
description = "wRPC HTTP interface"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime-wasi-http = { workspace = true, optional = true }
wrpc-transport = { workspace = true }
