[package]
name = "wrpc-interface-http"
version = "0.11.2"
description = "wRPC HTTP interface"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
http = ["dep:http"]
http-body = ["dep:http", "dep:http-body", "dep:http-body-util"]
wasmtime-wasi-http = ["http-body", "dep:tokio-stream", "dep:wasmtime-wasi-http"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime-wasi-http = { workspace = true, optional = true }
wrpc-transport = { workspace = true }
