[package]
name = "wrpc-interface-http"
version = "0.20.0"
description = "wRPC HTTP interface"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
http = ["dep:http"]
http-body = ["http", "dep:http-body", "dep:http-body-util", "dep:tokio-stream"]
hyper = ["http-body", "dep:hyper"]
wasmtime-wasi-http = ["http-body", "dep:wasmtime-wasi-http"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime-wasi-http = { workspace = true, optional = true }
wrpc-transport = { workspace = true }
