[package]
name = "wrpc-interface-keyvalue"
version = "0.13.0"
description = "wRPC keyvalue interface"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
tracing = { workspace = true, features = ["attributes"] }
wrpc-transport = { workspace = true }
