[package]
name = "wrpc-introspect"
version = "0.6.0"
description = "Component type introspection for wRPC"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wit-parser = { workspace = true }
