[package]
name = "wrpc-pack"
version = "0.1.0"
description = "Temporary stopgap solution for encoding fully-synchronous wRPC values"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
wrpc-transport = { workspace = true }
