[package]
name = "wrpc-runtime-wasmtime"
version = "0.16.0"
description = "wRPC wasmtime integration"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wrpc-transport = { workspace = true }
