[package]
name = "wrpc-runtime-wasmtime"
version = "0.17.0"
description = "wRPC wasmtime integration"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
tracing = { workspace = true, features = ["attributes"] }
wasm-tokio = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-parser = { workspace = true }
wrpc-introspect = { workspace = true }
wrpc-transport = { workspace = true }
