[package]
name = "wrpc-test"
version = "0.3.0"
description = "wRPC test utilities"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["nats", "quic", "webtransport", "websockets"]
nats = ["dep:async-nats", "wrpc-cli/nats"]
quic = ["dep:quinn"]
webtransport = ["dep:wtransport"]
websockets = ["dep:tokio-websockets"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["ring"], optional = true }
futures = { workspace = true }
quinn = { workspace = true, features = [
    "log",
    "platform-verifier",
    "ring",
    "runtime-tokio",
    "rustls",
], optional = true }
rcgen = { workspace = true, features = ["crypto", "ring", "zeroize"] }
rustls = { workspace = true, features = ["logging", "ring", "std"] }
tokio = { workspace = true, features = ["net", "process", "rt-multi-thread"] }
tokio-websockets = { workspace = true, features = [
    "client",
    "rand",
    "ring",
    "server",
], optional = true }
tracing = { workspace = true }
wrpc-cli = { workspace = true }
wrpc-transport = { workspace = true }
wtransport = { workspace = true, features = [
    "ring",
    "self-signed",
], optional = true }
