[package]
name = "wrpc-transport-legacy"
version = "0.24.3"
description = "wRPC core transport functionality (deprecated)"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true, features = ["std"] }
futures = { workspace = true }
leb128 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true, features = ["attributes"] }
wasm-tokio = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
