[package]
name = "wrpc-transport-nats-legacy"
version = "0.21.0"
description = "wRPC NATS transport (deprecated)"
publish = false

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wrpc-transport-legacy = { workspace = true }
