[package]
name = "wrpc-transport-nats-next"
version = "0.22.0"
description = "wRPC NATS transport"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tower = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
wasm-tokio = { workspace = true }
wrpc-transport-next = { workspace = true }
